# telemetron

./: Cargo.toml  config.toml  readme.md  rustfmt.toml
src/: common_types.rs  config.rs  error.rs  event.rs  http.rs  main.rs  metrics.rs  plugins.rs  processor.rs  server.rs  state.rs
src/processing/: error.rs  mod.rs  source_telemetry.rs  storage.rs
src/validation/: event_type.rs  mod.rs  source_id.rs
