[package]
name = "telemetron"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = "0.8.3"
chrono = { version = "0.4.40", features = ["serde"] }
config = { version = "0.15.11", features = ["toml"] }
dashmap = "6.1.0"
futures = "0.3.31"
inventory = "0.3.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["time"] }
toml = "0.8.20"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
validator = { version = "0.20.0", features = ["derive"] }
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
once_cell = "1.19"
http = "1.0"
